configuration: add support to setup the arguments for libVLC

Sometimes, passing different command line options to libVLC
may help to solve some troubles on some special setups. So,
add an option to allow changing the libVLC parameters.

BUG: 351774

Signed-off-by: Mauro Carvalho Chehab <mchehab@osg.samsung.com>